# mcp-hub

./: .env.example  .gitignore  Makefile  README.MD  TODO.md  compose.yml  pyproject.toml
backend/: Dockerfile  main.py
backend/src/: config.py  main.py
backend/src/api/: auth.py  benchmarks.py  reviews.py  schemas.py  servers.py
backend/src/db/: models.py  session.py
backend/src/services/: github_auth.py  registry_scraper.py
backend/tests/: __init__.py  _test_env.py  conftest.py  test_auth.py  test_benchmarks.py  test_regressions.py  test_reviews.py
frontend/: .env.example  Dockerfile  README.md  package-lock.json  package.json
frontend/src/app/: error.tsx  layout.tsx  page.tsx
frontend/src/app/servers/: loading.tsx  page.tsx
frontend/src/components/: theme-toggle.tsx
frontend/src/components/auth/: login-button.tsx
frontend/src/components/home/: hero.tsx  trending-servers.tsx
frontend/src/components/layout/: site-footer.tsx  site-header.tsx
frontend/src/components/servers/: compatibility-badge.tsx  compatibility-matrix.tsx  rating-distribution.tsx  rating-summary.tsx  rating-widget.tsx  results-summary.tsx  review-form.tsx  review-list.tsx  server-card-skeleton.tsx  server-card.tsx  server-compatibility-filter.tsx  server-detail-header.tsx  server-grid.tsx  server-pagination.tsx  server-rating-filter.tsx  server-search-bar.tsx  server-sort-select.tsx  test-results-panel.tsx
frontend/src/lib/: api.ts  config.ts  cookies.ts  types.ts  utils.ts
src/: __init__.py  config.py
src/api/: schemas.py
src/db/: models.py
tests/: test_api.py
(+3 files in other folders)
