[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-hub"
version = "0.1.0"
description = "Community-driven discovery platform for MCP servers with ratings, benchmarks, and one-click installation"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jay Gaha", email = "jaygaha@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.104.1",
    "sqlalchemy>=2.0.23",
    "sqlmodel>=0.0.14",
    "psycopg[binary]",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.0",
    "httpx2>=2.5.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.1.0",
    "uvicorn>=0.24.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "celery>=5.3.4",
    "redis>=5.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.8",
    "black>=23.12.0",
    "python-dotenv>=1.0.0",
]

